--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   },
   "dependencies": {
     "ts-node": "^10.4.0"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
   }
 }
