--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ts-node": "^10.4.0"
   },
   "publishConfig": {
+    "access": "public",
     "registry": "https://registry.npmjs.org"
   }
 }
