--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "np": "*",
     "ts-jest": "^27.0.7",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "vite": "^2.7.2",
+    "vite-plugin-dts": "^0.9.6"
   },
   "dependencies": {
     "ts-node": "^10.4.0"
